Bug 353258 - [PATCH] Word count broken after lines are removed from the middle of the document
Summary: [PATCH] Word count broken after lines are removed from the middle of the docu...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: Git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-27 23:57 UTC by Andrew Chen
Modified: 2015-10-04 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Chen 2015-09-27 23:57:01 UTC
Fix: https://git.reviewboard.kde.org/r/125354/

Reproducible: Always

Steps to Reproduce:
1. Enable word count
2. Type 3 lines each consisting of a single word (e.g. a single 'a')
3. Delete the middle line

Actual Results:  
Word count shows 3

Expected Results:  
Word count shows 2
Comment 1 Christoph Cullmann 2015-10-04 11:17:36 UTC
Git commit a036088a9f219f39967e46ade9703419c3e8afab by Christoph Cullmann, on behalf of Andrew Chen.
Committed on 04/10/2015 at 11:16.
Pushed by cullmann into branch 'master'.

Fix Kate word count issues by listening to DocumentPrivate instead of Document

REVIEW: 125354

M  +1    -1    src/view/wordcounter.cpp

http://commits.kde.org/ktexteditor/a036088a9f219f39967e46ade9703419c3e8afab