Fix Kate word count issues by listening to DocumentPrivate instead of Document

REVIEW: 125354
BUG: 353258