src/view/wordcounter.cpp
@@ -33,7 +33,7 @@ WordCounter::WordCounter(KTextEditor::ViewPrivate *view)
     , m_document(view->document())
 {
     connect(view->doc(), &KTextEditor::DocumentPrivate::textInserted, this, &WordCounter::textInserted);
-    connect(m_document, &KTextEditor::Document::textRemoved, this, &WordCounter::textRemoved);
+    connect(view->doc(), &KTextEditor::DocumentPrivate::textRemoved, this, &WordCounter::textRemoved);
     connect(view->doc(), &KTextEditor::DocumentPrivate::loaded, this, &WordCounter::recalculate);
     connect(view, &KTextEditor::View::selectionChanged, this, &WordCounter::selectionChanged);
 
